# news-feed

./: .gitignore  Cargo.toml  INSTALL.md  README.md  config.toml  install.sh  test-installation.sh  uninstall.sh
src/: app.rs  ascii_art.rs  categories.rs  cli.rs  config.rs  db.rs  input.rs  main.rs  navigation.rs  rss.rs  stats.rs  tabs.rs  theme.rs  ui.rs  ui_old.rs
