[package]
name = "news-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
feed-rs = "2.3.1"
futures = "0.3.31"
html2text = "0.16.5"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
