[package]
name = "news-feed"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A terminal-based RSS feed reader with a beautiful TUI"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/news-feed"
repository = "https://github.com/yourusername/news-feed"
keywords = ["rss", "feed", "tui", "terminal", "reader"]
categories = ["command-line-utilities"]

[[bin]]
name = "news"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
feed-rs = "2.3.1"
futures = "0.3.31"
html2text = "0.16.5"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
open = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
